--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         
 
         <div class="d-flex justify-content-center bg pt-5 pb-5">
-            <div class="row mx-3">
+            <div class="row">
                 <div class="col-12 xrt Py-5 wee">
                 
 
