--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     </nav>
 
 
-    <div class="d-flex justify-content-center pt-5 pb-3 bg">
+    <div class="d-flex justify-content-center topp pb-3 bg">
         <div class="row">
             <div class="col-12">
                 <h1 class="hu">CONTACT</h1>
@@ -207,3 +207,4 @@
 </body>
 
 </html>
+
