--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
     </nav>
 
 
-    <div class="d-flex justify-content-center pt-5 pb-5 bg">
+    <div class="d-flex justify-content-center topp pb-5 bg">
         <div class="row">
             <div class="col-12">
                 <h1 class="hu">PROJECTS</h1>
