--- a/index.html
+++ b/index.html
@@ -431,12 +431,12 @@
             </div>
             <div class="col-lg-3 col-12  ">
                 <div class="card mb-3 ddd">
-                    <img src="./lg3.jpg" class="card-img-top imj" alt="...">
+                    <img src="./lg3.jpg" class="card-img-top " alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Creative coding tips</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt vero rem
-                            quaerat debitis porro voluptatum.</p>
-                        <a href="#" class="btn btn-secondary">Python</a>
+                            quaerat debitis porro good</p>
+                        <a href="#" class="btn btn-secondary pb-4">Python</a>
                         <p class="card-text rr"><small class="text-body-secondary">Jan 08th, 2021</small></p>
                     </div>
                 </div>
