--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
 
-    </div>
+    </div> 
     <div class="d-flex justify-content-center bg">
         <div class="row">
             <div class="cool-12">
@@ -417,7 +417,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Social network designs</h5>
                         <p class="card-text">Earum officiis, totam nesciunt, numquam ratione at aperiam voluptatum dolor
-                            eos commodi channg goofd </p>
+                            eos commodi channg goofd goofd gkujfegag </p>
                         <a href="#" class="btn btn-secondary">React</a>
                         <p class="card-text rr"><small class="text-body-secondary">Jan 2nd, 2021</small></p>
                     </div>
@@ -488,7 +488,7 @@
                             aria-hidden="true"></i></a></p>
             </div>
             <div class="col-2 gyo">
-                <p> <a href="https:www.linkedin.com" target="_blank"><i class="fa fa-linkedin text-light"
+                <p> <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin text-light"
                             aria-hidden="true"></i></a></p>
 
 
