--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         <h5 class="card-title">Creative coding tips</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt vero rem
                             quaerat debitis porro good</p>
-                        <a href="#" class="btn btn-secondary pb-4">Python</a>
+                        <a href="#" class="btn btn-secondary ">Python</a>
                         <p class="card-text rr"><small class="text-body-secondary">Jan 08th, 2021</small></p>
                     </div>
                 </div>
